--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -85,7 +85,15 @@ h2 {
 p {
   font-size: 15px !important;
 }
-
+.error {
+  margin: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px solid black !important;
+  box-sizing: border-box;
+  text-align: center;
+}
 .landing {
   background-color: black !important;
   height: 100vh;
@@ -96,4 +104,10 @@ p {
   background-color: white !important;
   color: black !important;
   margin-top: 20px !important;
+}
+
+.loader {
+  display: "block";
+  margin: "0 auto";
+  transform: rotate(165deg);
 }
