--- a/frontend/src/assets/styles/Hotel.css
+++ b/frontend/src/assets/styles/Hotel.css
@@ -1,33 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: "Montserrat", sans-serif !important;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+* {
+  margin: 1px;
 }
-
-.navbar {
-  background-color: black !important;
-}
-
-.nav-link {
-  color: white !important;
-}
-
-.navbar-brand {
-  color: white !important;
-}
-
-.navbar-nav {
-  margin-left: auto !important;
+nav {
+  text-decoration: none;
 }
 
 .smallimg {
@@ -38,12 +16,6 @@ code {
 
 h1 {
   font-size: 20px !important;
-}
-
-.btn {
-  background-color: black !important;
-  color: white !important;
-  box-shadow: none !important;
 }
 
 .bs {
@@ -93,7 +65,6 @@ p {
   text-align: center;
 }
 .landing {
-  background-color: black !important;
   height: 100vh;
   padding-top: 130px;
 }
@@ -108,4 +79,7 @@ p {
   display: "block";
   margin: "0 auto";
   transform: rotate(165deg);
+}
+.landing-area {
+  display: flex;
 }
